# ice-priv

./: .clang-format  .gitignore  .gitmodules  .gn  BUILD.gn  CONTRIBUTING.md  README.md  genie.lua
.ci/: build.sh
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/emscripten/: args.gn
.github/linux/: args.gn
.github/workflows/: linux_android.yml  linux_emscripten.yml  pc_linux.yml  pc_windows.yml  win32_android.yml  win32_emscripten.yml
.ide/GN/linux/android/: args.gn
.ide/GN/linux/pc/: args.gn
.ide/GN/win/emscripten/: args.gn
.ide/GN/win/pc/: args.gn
.ide/vscode/linux/android/: c_cpp_properties.json
.ide/vscode/linux/emscripten/: c_cpp_properties.json
.ide/vscode/linux/pc/: c_cpp_properties.json  launch.json  tasks.json
.ide/vscode/win/pc/: c_cpp_properties.json  launch.json  tasks.json
BareBones/: BareBones.lua  build_assets.bat  main.cpp
Benchmarks/: BUILD.gn  Benchmark.cc
Benchmarks/IceSDK/Utils/FileSystem/: BUILD.gn  FileSystem.cc
Examples/: BUILD.gn
Examples/BareBones/: BUILD.gn  main.cc
Examples/BareBones/Assets/: hello.txt
IceSDK/: 0.ice.h  AndroidMain.cpp  BUILD.gn  GameBase.cc  GameBase.cpp  GameBase.h  IceSDK.gni  IceSDK.lua  pch.h
IceSDK/Android/IceSDK/: local.properties
IceSDK/Android/IceSDK/app/: build.gradle  local.properties
IceSDK/Android/IceSDK/app/gradle/wrapper/: gradle-wrapper.properties
IceSDK/Android/IceSDK/app/src/androidTest/java/de/mempler/pixelgame/: ExampleInstrumentedTest.kt
IceSDK/Android/IceSDK/app/src/main/: AndroidManifest.xml
IceSDK/Android/IceSDK/app/src/main/java/org/libsdl/app/: HIDDeviceBLESteamController.java  SDLActivity.java
IceSDK/Android/IceSDK/app/src/test/java/de/mempler/pixelgame/: ExampleUnitTest.kt
IceSDK/Android/IceSDK/gradle/wrapper/: gradle-wrapper.properties
IceSDK/Assets/: Asset.h  AssetFile.cc  AssetFile.cpp  AssetFile.h  AssetHeader.h  AssetManager.cc  AssetManager.cpp  AssetManager.h  AudioAsset.cc  AudioAsset.cpp  AudioAsset.h  ShaderAsset.cc  ShaderAsset.h  TextAsset.cc  TextAsset.cpp  TextAsset.h  Texture2DAsset.cc  Texture2DAsset.cpp  Texture2DAsset.h
IceSDK/Audio/: Audio.cpp  Audio.h  AudioEnums.h  AudioSystem.cc  AudioSystem.cpp  AudioSystem.h  Sound.cc  Sound.h
IceSDK/ECS/: Entity.cc  Entity.h  Scene.cc  Scene.h  System.cc  System.h
IceSDK/ECS/Components/: BaseComponent.h  CameraComponent.h  TransformComponent.h
IceSDK/ECS/Systems/: CameraSystem.cc  CameraSystem.h  TransformSystem.cc  TransformSystem.h
IceSDK/Graphics/: EntityHelper.cc  EntityHelper.h  GraphicsEntityHelper.cc  Texture2D.cc  Texture2D.h  Window.cc  Window.cpp  Window.h
IceSDK/Graphics/2D/: Texture2D.cpp  Texture2D.h
IceSDK/Graphics/Components/: AnimationComponent.h  MeshComponent.h  ShaderComponent.h  SpriteComponent.h  TextComponent.h  TileComponent.h
IceSDK/Graphics/Debug/: Draw.h
IceSDK/Graphics/Fonts/: FontAtlas.h  FontFace.cc  FontFace.h  FontManager.cc  FontManager.h
IceSDK/Graphics/ImGui/: bgfx_imgui.cc  bgfx_imgui.h  bgfx_utils.h
IceSDK/Graphics/ImGui/Shaders/: fs_imgui_color.bin.h  fs_imgui_cubemap.bin.h  fs_imgui_image.bin.h  fs_imgui_image_swizz.bin.h  fs_imgui_latlong.bin.h  fs_imgui_texture.bin.h  fs_ocornut_imgui.bin.h  vs_imgui_color.bin.h  vs_imgui_cubemap.bin.h  vs_imgui_image.bin.h  vs_imgui_latlong.bin.h  vs_imgui_texture.bin.h
IceSDK/Graphics/ImGui/Widgets/: AssetBrowser.cc  AssetBrowser.h  SceneGraph.cc  SceneGraph.h
IceSDK/Graphics/ImGui/Widgets/AssetBrowserResources/: animated_texture.png.h  audio.png.h  particle.png.h  texture.png.h  unknown.png.h  video.png.h
IceSDK/Graphics/Shaders/: ShaderManager.cc  ShaderManager.h  compile.frag.bat  compile.vert.bat  fs_sprite.sc  varying.def.sc  vs_sprite.sc
IceSDK/Graphics/Shaders/compiled/: fs_sprite.d3d11.h  fs_sprite.d3d12.h  fs_sprite.d3d9.h  fs_sprite.glsl.h  fs_sprite.metal.h  fs_sprite.vulkan.h  vs_sprite.d3d11.h  vs_sprite.d3d12.h  vs_sprite.d3d9.h  vs_sprite.glsl.h  vs_sprite.metal.h  vs_sprite.vulkan.h
IceSDK/Graphics/SpriteBatch/: SpriteBatch.cc  SpriteBatch.h
IceSDK/Graphics/Systems/: SpriteRenderingSystem.cc  SpriteRenderingSystem.h  TextRenderingSystem.cc  TextRenderingSystem.h
IceSDK/Graphics/TextureAtlas/: Packer.cc  Packer.h  TextureAtlas.cc  TextureAtlas.h
IceSDK/Graphics/Tilesheet/: Tilesheet.cc  Tilesheet.h
IceSDK/ImGui/: bgfx_imgui.cpp  bgfx_imgui.h
IceSDK/ImGui/Widgets/: AssetBrowser.cpp  AssetBrowser.h
IceSDK/Input/: ButtonState.h  InputPipeline.cc  InputPipeline.h  KeyboardMods.h  KeyboardTable.h  MouseTable.h
IceSDK/Input/Components/: KeyboardInputComponent.h  MouseInputComponent.h
IceSDK/Input/Systems/: KeyboardInputSystem.cc  KeyboardInputSystem.h  MouseInputSystem.cc  MouseInputSystem.h
IceSDK/Utils/: Buffer.h  FileSystem.cc  FileSystem.h  Instrumentor.h  Jenkins.h  Logger.cc  Logger.h  Math.h  Memory.h  String.h
Tests/: BUILD.gn  Test.cc
Tests/IceSDK/: BUILD.gn
Tests/IceSDK/Utils/: Buffer.cc  FileSystem.cc  String.cc
tools/: 0.ice.h  LICENSE.md  New Text Document.txt  bin2c.py  bootstrap.android.bat  bootstrap.bat  bootstrap.linux.sh  build4android.py  build_assets.bat  build_assets.sh  clean.bat  compile_assets.py  generate_html.py  genie.license  genie.linux  setup.py
tools/AssetCompiler/: AssetCompiler.lua  main.cpp
tools/linux/: gn
tools/sources/: BUILD.gn
tools/sources/AssetCompiler/: BUILD.gn  main.cc
