import("//IceSDK/IceSDK.gni")

IceSDK_Project("BareBones") {
    assets = [
        "Assets/Box.png",
        "Assets/Ground.png"
    ]
    
    # configs -= [ "//build/config/win:console" ]
    # configs += [ "//build/config/win:windowed" ]

    sources = [
        "main.cc"
    ]
}
